// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilters does not render aggregations when numberOfResults is 0 1`] = `<DocumentFragment />`;

exports[`AggregationFilters does not render aggregations with empty buckets 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between bg-white ph3 pt3"
  >
    <div
      class="ant-col mb4 ant-col-xs-24 ant-col-lg-24"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              Aggregation 1
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="ant-row ant-row-space-between mb2"
              type="flex"
            >
              <div
                class="ant-col"
              >
                <label
                  class="ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    <span
                      data-test-id="checkbox-aggregation-option-undefined"
                    />
                  </span>
                </label>
              </div>
              <div
                class="ant-col"
              >
                <span
                  class="ant-tag __UnclickableTag__"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AggregationFilters renders aggregations when numberOfResults is 0 and displayWhenNoResults is true 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between bg-white ph3 pt3"
  >
    <div
      class="ant-col mb3 ant-col-xs-24 ant-col-lg-24"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              Jessica Jones
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="ant-row ant-row-space-between mb2"
              type="flex"
            >
              <div
                class="ant-col"
              >
                <label
                  class="ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    <span
                      data-test-id="checkbox-aggregation-option-foo"
                    >
                      foo
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="ant-col"
              >
                <span
                  class="ant-tag __UnclickableTag__"
                >
                  0
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AggregationFilters renders with all props set [inline] 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between bg-white pv3"
  >
    <div
      class="ant-col md-pb3 ant-col-xs-24 ant-col-lg-5"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              [Range] Aggregation 1
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="__RangeAggregation__"
            >
              <div
                style="width: 100%; height: 100%;"
              >
                <div
                  class="rv-xy-plot "
                  style="width: 0px; height: 100px;"
                >
                  <svg
                    class="rv-xy-plot__inner"
                    height="100"
                    width="0"
                  >
                    <g
                      class="rv-xy-plot__series rv-xy-plot__series--rect pointer"
                      transform="translate(0,0)"
                    >
                      <rect
                        height="100"
                        style="opacity: 1; stroke: #bfbfbf; fill: #bfbfbf;"
                        width="NaN"
                        x="NaN"
                        y="0"
                      />
                    </g>
                    <g
                      class="rv-xy-plot__series rv-xy-plot__series--rect pointer highlight-bar-on-hover"
                      transform="translate(0,0)"
                    >
                      <rect
                        height="0"
                        style="opacity: 1; stroke: #bfbfbf; fill: #bfbfbf;"
                        width="NaN"
                        x="NaN"
                        y="100"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="ant-slider ant-slider-horizontal ant-slider-with-marks"
              >
                <div
                  class="ant-slider-rail"
                />
                <div
                  class="ant-slider-track ant-slider-track-1"
                />
                <div
                  class="ant-slider-step"
                >
                  <span
                    class="ant-slider-dot"
                    style="transform: translateX(-50%);"
                  />
                </div>
                <div
                  aria-disabled="false"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="NaN"
                  class="ant-slider-handle ant-slider-handle-1"
                  role="slider"
                  style="transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  aria-disabled="false"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="NaN"
                  class="ant-slider-handle ant-slider-handle-2"
                  role="slider"
                  style="transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  class="ant-slider-mark"
                >
                  <span
                    class="ant-slider-mark-text"
                    style="transform: translateX(-50%);"
                  >
                    NaN
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col md-pb3 ant-col-xs-24 ant-col-lg-5"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              Aggregation 2
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="ant-row ant-row-space-between mb2"
              type="flex"
            >
              <div
                class="ant-col"
              >
                <label
                  class="ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    <span
                      data-test-id="checkbox-aggregation-option-2"
                    >
                      2
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="ant-col"
              >
                <span
                  class="ant-tag __UnclickableTag__"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AggregationFilters renders with all props set 1`] = `
<DocumentFragment>
  <div
    class="ant-row ant-row-space-between bg-white ph3 pt3"
  >
    <div
      class="ant-col mb4 ant-col-xs-24 ant-col-lg-24"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              [Range] Aggregation 1
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="__RangeAggregation__"
            >
              <div
                style="width: 100%; height: 100%;"
              >
                <div
                  class="rv-xy-plot "
                  style="width: 0px; height: 100px;"
                >
                  <svg
                    class="rv-xy-plot__inner"
                    height="100"
                    width="0"
                  >
                    <g
                      class="rv-xy-plot__series rv-xy-plot__series--rect pointer"
                      transform="translate(0,0)"
                    >
                      <rect
                        height="100"
                        style="opacity: 1; stroke: #bfbfbf; fill: #bfbfbf;"
                        width="NaN"
                        x="NaN"
                        y="0"
                      />
                    </g>
                    <g
                      class="rv-xy-plot__series rv-xy-plot__series--rect pointer highlight-bar-on-hover"
                      transform="translate(0,0)"
                    >
                      <rect
                        height="0"
                        style="opacity: 1; stroke: #bfbfbf; fill: #bfbfbf;"
                        width="NaN"
                        x="NaN"
                        y="100"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="ant-slider ant-slider-horizontal ant-slider-with-marks"
              >
                <div
                  class="ant-slider-rail"
                />
                <div
                  class="ant-slider-track ant-slider-track-1"
                />
                <div
                  class="ant-slider-step"
                >
                  <span
                    class="ant-slider-dot"
                    style="transform: translateX(-50%);"
                  />
                </div>
                <div
                  aria-disabled="false"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="NaN"
                  class="ant-slider-handle ant-slider-handle-1"
                  role="slider"
                  style="transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  aria-disabled="false"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="NaN"
                  class="ant-slider-handle ant-slider-handle-2"
                  role="slider"
                  style="transform: translateX(-50%);"
                  tabindex="0"
                />
                <div
                  class="ant-slider-mark"
                >
                  <span
                    class="ant-slider-mark-text"
                    style="transform: translateX(-50%);"
                  >
                    NaN
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col mb4 ant-col-xs-24 ant-col-lg-24"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              Aggregation 3
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="ant-row ant-row-space-between mb2"
              type="flex"
            >
              <div
                class="ant-col"
              >
                <label
                  class="ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    <span
                      data-test-id="checkbox-aggregation-option-3"
                    >
                      3
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="ant-col"
              >
                <span
                  class="ant-tag __UnclickableTag__"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col mb3 ant-col-xs-24 ant-col-lg-24"
    >
      <div
        class="w-100 br1"
      >
        <div
          class="ant-row ant-row-space-between"
          type="flex"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <h3
              class="pb1 fw4"
            >
              Aggregation 2
            </h3>
          </div>
          <div
            class="ant-col"
          />
        </div>
        <div
          class="ant-row w-100"
        >
          <div
            class="ant-col"
            style="flex-basis: auto;"
          >
            <div
              class="ant-row ant-row-space-between mb2"
              type="flex"
            >
              <div
                class="ant-col"
              >
                <label
                  class="ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value=""
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    <span
                      data-test-id="checkbox-aggregation-option-2"
                    >
                      2
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="ant-col"
              >
                <span
                  class="ant-tag __UnclickableTag__"
                >
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
